--- a/todo/www/index.html
+++ b/todo/www/index.html
@@ -26,20 +26,37 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
-    <!-- cordova script (this will be a 404 during development) -->
+        <!-- your app's js -->
+    <script src="js/app.js"></script>
+
+    <!-- cordova script (this will be a 404 during development, and this must be the last script according to the docs at http://ionicframework.com/docs/guide/starting.html: however, in the template app.js follows cordova.js unclear which is correct) -->
     <script src="cordova.js"></script>
 
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="ionictodo">
+  <ion-side-menus>
 
-    <ion-pane>
+  <!-- Center content -->
+    <ion-side-menu-content>
+      <ion-header-bar class="bar-dark">
+        <h1 class="title">Todo</h1>
+      </ion-header-bar>
+      <ion-content>
+      </ion-content>
+    </ion-side-menu-content>
+  <!-- Left menu -->
+    <ion-side-menu side="left">
+      <ion-header-bar class="bar-dark">
+        <h1 class="title">Projects</h1>
+      </ion-header-bar>
+    </ion-side-menu>
+  </ion-side-menus>
+<!--     <ion-pane>
       <ion-header-bar class="bar-stable">
         <h1 class="title">Ionic Blank Starter</h1>
       </ion-header-bar>
       <ion-content>
       </ion-content>
-    </ion-pane>
+    </ion-pane> -->
   </body>
 </html>
